src/app/globals.css
@import "tailwindcss";

:root {
  --background: #1F2120;
  --foreground: #f0ede8;

  --accent: #f06030;        /* your primary orange */
  --accent-warm: #e84d1c;   /* deeper orange for hover */
  --accent-muted: #7a3018;  /* dark orange for subtle tints */
  --surface: #141414;       /* card/section bg */
  --surface-2: #1c1c1c;     /* elevated surface */
  --muted: #5a5752;         /* placeholder / secondary text */
  --border: rgba(240, 96, 48, 0.15); /* orange-tinted borders */
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-accent: var(--accent);
  --color-accent-warm: var(--accent-warm);
  --color-accent-muted: var(--accent-muted);
  --color-surface: var(--surface);
  --color-surface-2: var(--surface-2);
  --color-muted: var(--muted);
  --color-border: var(--border);
  --font-display: var(--font-display); 
  --font-body: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-logo: var(--font-logo);
}

html {
  scroll-behavior: smooth;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family:var(--font-body), sans-serif;
}

h1, h2, h3, h4 {
  font-family: var(--font-display), serif;
}

.syne{
  font-family: var(--font-logo);
}

.hero-header{
  width: 100%;
  min-height: 100vh;
  background-image: url("/hero-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.hero-header::before {
  content: "";
  position: absolute;
  inset: 0;
  background: linear-gradient(
    to top,
    rgba(0,0,0,0.8),
    rgba(0,0,0,0.3),
    transparent
  );
}


@media (max-width: 1024px) {
  .hero-header{
    background-position: 50% center;
  }
}

@media (max-width: 768px) {
  .hero-header {
    background-position: 50% center;
    min-height: 100vh;
  }
}

.timeline::after{
  content: " ";
  position: absolute;
  width: 6px;
  height: 100%;
  background: #fff;
  top: 0;
  left: 50%;
  margin-left: 9px;
  z-index: 6;
}

@media (max-width: 1000px) {
  .timeline::after{
    left: 0;
  }
}

@media screen and (max-width: 768px){
  .timeline::after{
    left: 0;
  }
}

